# DocCollate

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  soft_copyright.yaml
assessment/: .gitignore  README.md  input_assessment.json  pyproject.toml
assessment/src/: main.py
assessment/src/assessment_form/: cli.py
assessment/src/assessment_form/commands/: init.py  run.py
assessment/src/assessment_form/core/: config.py  constants.py  extractor.py  models.py  renderer.py  services.py
assessment/src/assessment_form/infra/: ai_agent.py  field_pools.py  fs.py  retrieval.py
assessment/src/assessment_form/resources/: __init__.py  assessment_application_materials.xlsx  field_pools.json
assessment/src/assessment_form/utils/: format.py  logging.py
assets/: proposal_template.docx  test_function_form.docx  test_registration_form.docx
copyright/: .gitignore  README.md  input_copyright.json  pyproject.toml
copyright/scripts/: dev.sh
copyright/src/: main.py
copyright/src/doccollate_copyright/: cli.py
copyright/src/doccollate_copyright/commands/: init.py  run.py
copyright/src/doccollate_copyright/core/: config.py  models.py  renderer.py  services.py
copyright/src/doccollate_copyright/infra/: ai_agent.py  env_pools.py  fs.py  http.py  path_utils.py  retrieval.py
copyright/src/doccollate_copyright/resources/: default.toml  env_config_pools.yaml  software_copyright_application_form.docx
copyright/src/doccollate_copyright/utils/: format.py  logging.py
copyright/src/scripts/: test_llm_connect.py
doccollate/: __init__.py  cli.py  config.py  data_fields.md  dependency_fields.md  fill_form.py
doccollate/builders/: copyright.py  proposal.py  test_forms.py
doccollate/core/: constants.py  date_utils.py  field_requirements.py  form_context.py  form_pipeline.py  input_flow.py
doccollate/extract/: data_extract.py  data_normalize.py  text_extractors.py  text_retrieval.py  text_sections.py
doccollate/io/: io_utils.py
doccollate/llm/: __init__.py  api.py  client.py  utils.py
doccollate/proposal/: chunking.py  mapping.py  retrieval.py  spec_loader.py  utils.py  validate.py  validate_autofix.py  validate_schema.py
doccollate/render/: docx_fill.py  docx_render.py  fill_form.py  renderers.py
environment/: README.md  input_environment.json  pyproject.toml
environment/src/: main.py
environment/src/environment_form/: cli.py
environment/src/environment_form/commands/: init.py  run.py
environment/src/environment_form/core/: config.py  models.py  renderer.py  services.py
environment/src/environment_form/infra/: app_type_llm.py  fs.py  profile_pool.py
environment/src/environment_form/resources/: env_profile_pools.yaml  non_embedded_environment.docx
environment/src/environment_form/utils/: logging.py
function/: README.md  pyproject.toml
function/src/: main.py
function/src/function_form/: cli.py
function/src/function_form/commands/: init.py  run.py
function/src/function_form/core/: config.py  extractor.py  models.py  renderer.py  services.py
function/src/function_form/infra/: function_llm.py  path_utils.py  retrieval.py
function/src/function_form/resources/: test_function_form.docx
function/src/function_form/utils/: logging.py
proposal/: Makefile  README.md  pyproject.toml  run_config_example.json
proposal/assets/: proposal_template.docx
proposal/docs/: ledger-field-definitions.md  proposal-template-field-relations.md
proposal/src/proposal_app/: config.py
proposal/src/proposal_app/core/: date_utils.py  input_flow.py
proposal/src/proposal_app/io/: io_utils.py
proposal/src/proposal_app/llm/: __init__.py  api.py  client.py  pydantic_agent.py  pydantic_ledger.py  pydantic_rewrite.py
proposal/src/proposal_app/proposal/: cluster_defs.py  doc_rewrite.py  inputs.py  ledger_gate.py  ledger_mapping.py  mapping.py  postprocess.py  rules_engine.py  table_generators.py  utils.py
proposal/src/proposal_app/render/: __init__.py  api.py  docx_fill.py  docx_render.py
proposal/src/proposal_cli/: cli.py  graph.py  pipeline.py
registration/: README.md  input_registration.json  pyproject.toml
registration/src/: main.py
registration/src/registration_form/: cli.py
registration/src/registration_form/commands/: init.py  run.py
registration/src/registration_form/core/: config.py  models.py  renderer.py  services.py
registration/src/registration_form/infra/: fs.py  platform_pool.py  registration_llm.py
registration/src/registration_form/resources/: env_platform_pools.yaml  soft_copyright.yaml
registration/src/registration_form/utils/: format.py
templates/: 产品测试功能表.docx  计算机软件著作权登记申请表.docx
