[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doccollate"
version = "0.1.0"
description = "Generate software test and copyright forms from manuals"
requires-python = ">=3.10"
dependencies = [
  "openai",
  "pdfplumber",
  "python-docx",
  "docxtpl",
  "openpyxl",
  "pyyaml",
  "python-dotenv",
]

[project.scripts]
doccollate = "doccollate.cli:main"

[tool.setuptools]
packages = ["doccollate"]
