[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "doccollate-function"
version = "0.1.0"
description = "Standalone test-function-form generator"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2,<3",
  "python-docx",
  "docxtpl",
  "python-dotenv",
  "tomli; python_version < '3.11'",
]

[project.scripts]
function-form = "function_form.cli:main"

[tool.hatch.build]
include = [
  "src/function_form/resources/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/function_form"]

[tool.doccollate.templates]
function = "src/function_form/resources/test_function_form.docx"

[tool.doccollate.llm]
model = "qwen3-max"
base_url = ""
api_key = ""
timeout_seconds = 25
